# CinderSandbox

./: .gitignore  CMakeLists.txt
cmake/: FindFFMPEG.cmake
drawing/src/: CMakeLists.txt  CinderProjectApp.cpp
helloWorld/: CMakeLists.txt
helloWorld/src/: CMakeLists.txt  CinderProjectApp.cpp
image_resources_surface/: CMakeLists.txt
image_resources_surface/resources/: Resources.h
image_resources_surface/src/: CMakeLists.txt  CinderProjectApp1.cpp  CinderProjectApp1.h  main.cpp
image_resources_surface/src/surface/: CMakeLists.txt  CinderProjectApp.cpp  CinderProjectApp.h
image_resources_surface/src/texture/: CMakeLists.txt  CinderProjectApp.cpp  CinderProjectApp.h
img_process/: CMakeLists.txt
img_process/src/: CMakeLists.txt  CinderProjectApp.cpp  CinderProjectApp.h
template/: CMakeLists.txt
template/src/: CMakeLists.txt
template2/: CMakeLists.txt
template2/src/: CMakeLists.txt
userInput/: CMakeLists.txt
userInput/src/: CMakeLists.txt  CinderProjectApp.cpp  Circle.cpp  Circle.h
videoPlayer/: CMakeLists.txt
videoPlayer/src/: CMakeLists.txt  CinderProjectApp.cpp  main.cpp
