cmake_minimum_required(VERSION 3.9)
project(helloCinder)
#set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
include(/Users/hborcher/Downloads/Cinder/build/lib/macosx/Debug/cinderTargets.cmake)
#add_subdirectory("2d animation")
add_subdirectory(helloWorld)
add_subdirectory(drawing)
add_subdirectory(userInput)
add_subdirectory(image_resources_surface)